lab1/Test/L1-A-12-73.output
Error Type B at Line 5
Error Type B at Line 10
Error Type A at Line 24
Error Type B at Line 28
Error Type A at Line 29
Error Type A at Line 35
Error Type B at Line 37
