lab1/Test/L1-A-12-73.cmm
struct KEJf9 {
  float F ;
  int ZVK = BqeN2s5WMj , Q5yJi_fBC0bwz [ 143858304 
    ] ;
}lA ( {
  if ( hQ )   while ( ZpvWilT9VfXmK2 )   MqJyUjEO5DF4_gVnZl 
    = cDaY9v68euscX || HE != I1irEgF8uMs326am5 - Lz4 [ 
    Lu && iGc7V4_Ju == kOY9V3cZ ( doQSaf8All1erS6ec4g 
    , SiQc2r59OBbFiHZ >= zmLVUspX + hxFS1vSv7UgabOWSdrq 
    * Y ( PaTqS2rCgcg = NihdJkrdj9 > ARaAC0Ey8X [ = Ny1VQ 
    + - ( Yzqgcp0q89o31vc ) <= 1209892956.41311703 ] < 
    1302432214 ) . HijcJ44KZerosT . QI8FY7wQahv ) * - 
    eCcKEKYfn4 ( ) . cPWlFVQfMqJQ / - ! qgB_b91n ] ;


}
struct YFgcTUtApuw43r3SW ;
int ;
struct {
  int sTOd1ZaCi ;
  int LpXBVTnU4ZTnhvLnS ;
  struct {
    int z ;
  }ghnXhLy1XMEx6p721O65 %;
}dqWsYWZ 
;
int 
int ;
int D3e ( int :rb4yRGq12dhYE0Z ) {
}
int djsbD , WD9K9zAYdl9sumEiRnN 

;
int ;
int OA ( int qOmxH89ooxN , int WsdNQGgZJ6 \) {
  g7u0 ;
  if VWaik65m )   uegEubkQbJ3f ;
else   if ( iiEzxZdLu1Np4S )   Fr02sJ0jOZMNhH ;


  if ( DNvhubPPm5d ) {
  }else   return DDP6WaOMjRyc ;

}
